--- a/mobileApp/classroom_leds/flutter_todos/packages/todos_repository/pubspec.yaml
+++ b/mobileApp/classroom_leds/flutter_todos/packages/todos_repository/pubspec.yaml
@@ -4,8 +4,13 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.14.0 <3.0.0"
+  sdk: ">=2.13.0 <3.0.0"
+
+dependencies:
+  todos_api:
+    path: ../todos_api
 
 dev_dependencies:
-  test: ^1.19.2
+  mocktail: ^0.2.0
+  test: ^1.17.0
   very_good_analysis: ^2.4.0
