--- a/mobileApp/classroom_leds/flutter_todos/pubspec.yaml
+++ b/mobileApp/classroom_leds/flutter_todos/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_services_binding: ^0.1.0
+  http: ^0.13.4
   intl: ^0.17.0
   local_storage_todos_api:
     path: packages/local_storage_todos_api
