--- a/mobileApp/classroom_leds/flutter_todos/pubspec.yaml
+++ b/mobileApp/classroom_leds/flutter_todos/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   bloc: ^8.0.1
+  color: any
   equatable: ^2.0.0
   flutter:
     sdk: flutter
@@ -19,6 +20,7 @@ dependencies:
   intl: ^0.17.0
   local_storage_todos_api:
     path: packages/local_storage_todos_api
+  material: ^1.0.0+2
   todos_api:
     path: packages/todos_api
   todos_repository:
